--- a/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Alteration/Index.cshtml
@@ -124,8 +124,8 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Alteration date.</span>
-                        <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                            <input type="text" class="form-control datepicker" name="Alteration.Alteration_Date" placeholder="Alteration date." value="@((Model.Alteration.Alteration_Date == DateTime.MinValue ? "" : Model.Alteration.Alteration_Date.ToString("dd-MM-yyyy")))" reado readonly />
+                        <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" name="Alteration.Alteration_Date" placeholder="Alteration date." value="@((Model.Alteration.Alteration_Date == DateTime.MinValue ? "" : Model.Alteration.Alteration_Date.ToString("MM-dd-yyyy")))" reado readonly />
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
@@ -133,8 +133,8 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Delivery date</span>
-                        <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                            <input type="text" class="form-control datepicker" placeholder="Delivery date." name="Alteration.Delivery_Date" value="@((Model.Alteration.Delivery_Date == DateTime.MinValue ? "" : Model.Alteration.Delivery_Date.ToString("dd-MM-yyyy")))" reado readonly />
+                        <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                            <input type="text" class="form-control datepicker" placeholder="Delivery date." name="Alteration.Delivery_Date" value="@((Model.Alteration.Delivery_Date == DateTime.MinValue ? "" : Model.Alteration.Delivery_Date.ToString("MM-dd-yyyy")))" reado readonly />
                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>  
