--- a/MyLeoRetailer/Views/PostLogin/Master/Challan/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Challan/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="col-md-3">
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Challan Date</span>
-                <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
                     <input type="text" class="form-control datepicker" name="" value="" />
                     <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
@@ -68,7 +68,7 @@
         <div class="col-md-3">
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Against Form Date</span>
-                <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
                     <input type="text" class="form-control datepicker" name="" value="" />
                     <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
@@ -86,7 +86,7 @@
         <div class="col-md-3">
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Packing Date</span>
-                <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
                     <input type="text" class="form-control datepicker" name="" value="" />
                     <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
@@ -280,7 +280,7 @@
         <div class="col-md-3">
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Lr Date</span>
-                <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
+                <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
                     <input type="text" class="form-control datepicker" name="" value="" />
                     <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
