--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
@@ -132,7 +132,7 @@
                                                 </td>
 
                                                 <td>
-                                                    @item.Dispatch_Date.ToString("dd-MM-yyyy")
+                                                    @item.Dispatch_Date.ToString("MM-dd-yyyy")
                                                 </td>
 
                                                 <td>
