--- a/MyLeoRetailer/Views/PostLogin/Report/Sales/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Report/Sales/Search.cshtml
@@ -65,8 +65,8 @@
 
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">From date</span>
 
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" id="dtpFrom_Date" name="Filter.From_Date" value="@((Model.Filter.From_Date == DateTime.MinValue ? "" : Model.Filter.From_Date.ToString("dd-MM-yyyy")))"  readonly />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" id="dtpFrom_Date" name="Filter.From_Date" value="@((Model.Filter.From_Date == DateTime.MinValue ? "" : Model.Filter.From_Date.ToString("MM-dd-yyyy")))"  readonly />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
 
@@ -78,8 +78,8 @@
 
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">To date</span>
 
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" id="dtpTo_Date" name="Filter.To_Date" value="@((Model.Filter.To_Date == DateTime.MinValue ? "" : Model.Filter.To_Date.ToString("dd-MM-yyyy")))" readonly />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" id="dtpTo_Date" name="Filter.To_Date" value="@((Model.Filter.To_Date == DateTime.MinValue ? "" : Model.Filter.To_Date.ToString("MM-dd-yyyy")))" readonly />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
 
