--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/Index.cshtml
@@ -174,8 +174,8 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">GR date</span>
-                                        <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                            <input type="text" class="form-control datepicker" id="dtpReturn_Date" name="SalesReturn.Sales_Return_Date" value="@((Model.SalesReturn.Sales_Return_Date == DateTime.MinValue ? "" : Model.SalesReturn.Sales_Return_Date.ToString("dd-MM-yyyy")))" readonly />
+                                        <div class="input-group date" id="dp-2" data-date="" data-date-format="MM-dd-yyyy">
+                                            <input type="text" class="form-control datepicker" id="dtpReturn_Date" name="SalesReturn.Sales_Return_Date" value="@((Model.SalesReturn.Sales_Return_Date == DateTime.MinValue ? "" : Model.SalesReturn.Sales_Return_Date.ToString("MM-dd-yyyy")))" readonly />
                                             <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                         </div>
                                     </div>
