--- a/MyLeoRetailer/Views/PostLogin/SalesReturn/SalesReturnView.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesReturn/SalesReturnView.cshtml
@@ -127,7 +127,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="control-label" style="color: #33414e">Sales Return Date</label>
-                                    <span class="label label-primary label-form label-read" style="margin-bottom: 1px;">@Model.SalesReturn.Sales_Return_Date.ToString("dd-MM-yyyy")</span>
+                                    <span class="label label-primary label-form label-read" style="margin-bottom: 1px;">@Model.SalesReturn.Sales_Return_Date.ToString("MM-dd-yyyy")</span>
                                 </div>
                             </div>
 
