--- a/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Print.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/GiftVoucher/Print.cshtml
@@ -102,7 +102,7 @@
                                     <div class="col-sm-2 invoice-col" style="text-align:right">
                                         <div class="form-group">
                                             <label for="txtVoucher_Date" style="color: #333" class="">Voucher Date:</label>
-                                            <label for="txtVoucher_Date" style="color: #333" class="">@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("dd-MM-yyyy")))</label>
+                                            <label for="txtVoucher_Date" style="color: #333" class="">@((Model.GiftVoucher.Gift_Voucher_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Date.ToString("MM-dd-yyyy")))</label>
                                         </div>
                                     </div><!-- /.col -->
                                 </div>
@@ -127,7 +127,7 @@
                                     <div class="col-md-2 invoice-col" style="text-align:right;">
                                         <div class="form-group">
                                             <label for="txtVoucher_Expiry_Date" style="color: #333" class="">Voucher Expiry Date:</label>
-                                            <label for="txtVoucher_Expiry_Date" style="color: #333" class="">@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("dd-MM-yyyy")))</label>
+                                            <label for="txtVoucher_Expiry_Date" style="color: #333" class="">@((Model.GiftVoucher.Gift_Voucher_Expiry_Date == DateTime.MinValue ? "" : Model.GiftVoucher.Gift_Voucher_Expiry_Date.ToString("MM-dd-yyyy")))</label>
                                         </div>
                                     </div><!-- /.col -->
                                 </div>
