--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesInvoiceView.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/SalesInvoiceView.cshtml
@@ -125,7 +125,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="control-label" style="color: #33414e">Invoice Date</label>
-                                    <span class="label label-primary label-form label-read" style="margin-bottom: 1px;">@Model.SalesInvoice.Invoice_Date.ToString("dd-MM-yyyy")</span>
+                                    <span class="label label-primary label-form label-read" style="margin-bottom: 1px;">@Model.SalesInvoice.Invoice_Date.ToString("MM-dd-yyyy")</span>
                                 </div>
                             </div>
 
